# congressional2023

./: .gitignore  README.md  palm_tree_training_v7.ipynb
PalmVision/PalmVision/: AerialListView.swift  ChatView.swift  ContentView.swift  DetectionView.swift  ImageModifier.swift  ImageViewModel.swift  LaunchScreen.swift  LaunchScreenView.swift  MapView.swift  ObjectAnalysisView.swift  ObjectAnalyzer.swift  ObjectDetection.swift  ObjectDetectionView.swift  PalmVisionApp.swift  RandomView.swift  SimpleVideoPlayerView.swift  TabBarMainView.swift  UiImageExtension.swift  VideoDetectionView.swift  VideoListView.swift  VideoPlayerView.swift  VideoView.swift  VideoViewModel.swift
PalmVision/PalmVision.xcodeproj/: project.pbxproj
PalmVision/PalmVision/Assets.xcassets/AppIcon.appiconset/: Contents.json
PalmVision/PalmVision/Assets.xcassets/Welcome.imageset/: Contents.json
PalmVision/PalmVision/best.mlpackage/: Manifest.json
PalmVision/PalmVisionTests/: PalmVisionTests.swift
PalmVision/PalmVisionUITests/: PalmVisionUITests.swift  PalmVisionUITestsLaunchTests.swift
chatgpt/: chat.py
dataset/: README.md
experiment/: main.py
experiments/: chat.py  pyproject.toml
figma/: version0.fig
gradio/: main.py  pyproject.toml
gradio/flagged/: log.csv
model/: convert.py  palm_tree_gradio_v1.ipynb  palm_tree_gradio_v2.ipynb  palm_tree_training_v7.ipynb  pyproject.toml  requirements.txt
notebooks/: palm_tree_gradio_v1.ipynb  palm_tree_gradio_v2.ipynb  palm_tree_training_v7.ipynb  palm_tree_v7.ipynb  pyproject.toml
(+7 files in other folders)
