[tool.poetry]
name = "palm"
version = "0.1.0"
description = ""
authors = ["fkatelyn <fkatelyn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^3.44.4"
torch = "^2.0.1"
Pillow = "*"
torchvision = "*"
ultralytics = ">=8.0.147"
numpy = "*"
pandas = "*"
opencv-python = ">4.1.1"

